# pytotus

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: reference_ip.py  validate_email.py
tests/: test_geopoi.py
totus/: reference.py  totus.py  validate.py
totus/dto/: POI.py  ValidatedEmail.py
