[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "totus"
version = "0.1.0"
authors = [{ name = "GoTotus Team", email = "support@gototus.com" }]
description = "GoTotus Python library"
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["requests>=2.28.0"]
license = "BSD-3-Clause"